--- a/ExamApp.UI/MainWindow.xaml
+++ b/ExamApp.UI/MainWindow.xaml
@@ -5,8 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExamApp.UI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100px"></ColumnDefinition>
+            <ColumnDefinition Width="600px"></ColumnDefinition>
+            <ColumnDefinition Width="100px"></ColumnDefinition>
+
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100px"></RowDefinition>
+            <RowDefinition Height="450px"></RowDefinition>
+            <RowDefinition Height="100px"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Name="header"  Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">Manage Group</TextBlock>
+        <Grid Name="grdControls" Grid.Row="1" Grid.Column="1" Height="400px">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200px"></ColumnDefinition>
+                <ColumnDefinition Width="200px"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80px"></RowDefinition>
+                <RowDefinition Height="80px"></RowDefinition>
+                <RowDefinition Height="80px"></RowDefinition>
+                <RowDefinition Height="80px"></RowDefinition>
+            </Grid.RowDefinitions>
+            <TextBlock Name="GroupName" Text="Group Name" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center"></TextBlock>
+            <TextBlock Name="GroupDesc" Text="Group Desc" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center"></TextBlock>
+            <TextBox Name="txtName"  Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"></TextBox>
+            <TextBox Name="txtDesc"  Grid.Column="1" Grid.Row="1" VerticalAlignment="Center"></TextBox>
+            <Button Grid.Column="1" Grid.Row="3" Width="100px" Height="30px" Name="BtnSave" Click="BtnSave_Click" >Save</Button>
+            <Button Grid.Column="1" Grid.Row="3" Width="100px" Height="30px" Name="BtnFind" Click="BtnFind_Click" Margin="258,25,-157,26">Find</Button>
+            <TextBox x:Name="txtGroupID"  Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Margin="0,36,0,28"/>
+            <TextBlock x:Name="GroupID" Text="Group Desc" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Margin="0,37,0,28"/>
+
+
+        </Grid>
+
     </Grid>
 </Window>
