--- a/ExamApp.UI/App.xaml
+++ b/ExamApp.UI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ExamApp.UI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/Controlls.xaml">
     <Application.Resources>
          
     </Application.Resources>
